notoriOS.cydsn/BUILD.log
--------------- Build Started: 03/27/2022 13:41:23 Project: notoriOS, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
python ../build_tools/get_commit_hash.py
a39ee02f4a94f25d261ca68e664922596878f987 8b938e5ad4c62369966e7a64f73d88406be020ff Jon <jniej100@gmail.com> 1647363105 -0400
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I..\emFile_V322c\Code\Include\PSoC5 -I..\emFile_V322c\Code\Include\PSoC5\emf32nOS -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/level_sensor.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -O0 -c level_sensor.c -o .\CortexM3\ARM_GCC_541\Debug\level_sensor.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I..\emFile_V322c\Code\Include\PSoC5 -I..\emFile_V322c\Code\Include\PSoC5\emf32nOS -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/sd_card.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -O0 -c sd_card.c -o .\CortexM3\ARM_GCC_541\Debug\sd_card.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I..\emFile_V322c\Code\Include\PSoC5 -I..\emFile_V322c\Code\Include\PSoC5\emf32nOS -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/voltages.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -O0 -c voltages.c -o .\CortexM3\ARM_GCC_541\Debug\voltages.o
voltages.c: In function 'pressure_sensor_readings':
voltages.c:65:11: warning: unused variable 'channels' [-Wunused-variable]
     float channels[AMux_CHANNELS];
           ^
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I..\emFile_V322c\Code\Include\PSoC5 -I..\emFile_V322c\Code\Include\PSoC5\emf32nOS -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/modem.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -O0 -c modem.c -o .\CortexM3\ARM_GCC_541\Debug\modem.o
modem.c: In function 'get_cell_network_stats':
modem.c:432:9: warning: unused variable 'match' [-Wunused-variable]
     int match = sscanf(uart_received_string,"\r\n+CESQ: %d,%d,%d,%d,%d,%d%*s",
         ^
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I..\emFile_V322c\Code\Include\PSoC5 -I..\emFile_V322c\Code\Include\PSoC5\emf32nOS -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/data.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -O0 -c data.c -o .\CortexM3\ARM_GCC_541\Debug\data.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I..\emFile_V322c\Code\Include\PSoC5 -I..\emFile_V322c\Code\Include\PSoC5\emf32nOS -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/influx.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -O0 -c influx.c -o .\CortexM3\ARM_GCC_541\Debug\influx.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I..\emFile_V322c\Code\Include\PSoC5 -I..\emFile_V322c\Code\Include\PSoC5\emf32nOS -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/diss_oxy.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -O0 -c diss_oxy.c -o .\CortexM3\ARM_GCC_541\Debug\diss_oxy.o
diss_oxy.c: In function 'DO_sensor_test':
diss_oxy.c:122:10: warning: variable 'excerpt' set but not used [-Wunused-but-set-variable]
     char excerpt[300]; // for debugging
          ^
diss_oxy.c: In function 'DO_cal':
diss_oxy.c:222:13: warning: statement with no effect [-Wunused-value]
             calibrated.all_do_readings;
             ^
diss_oxy.c:173:10: warning: variable 'excerpt' set but not used [-Wunused-but-set-variable]
     char excerpt[300]; // for debugging
          ^
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I..\emFile_V322c\Code\Include\PSoC5 -I..\emFile_V322c\Code\Include\PSoC5\emf32nOS -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/temperature.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -O0 -c temperature.c -o .\CortexM3\ARM_GCC_541\Debug\temperature.o
In file included from temperature.c:2:0:
temperature.h:9:3: error: conflicting types for 'TEMP_t'
 } TEMP_t;
   ^
In file included from notoriOS.h:17:0,
                 from temperature.c:1:
temperature.h:9:3: note: previous declaration of 'TEMP_t' was here
 } TEMP_t;
   ^
In file included from temperature.c:2:0:
temperature.h:13:8: error: conflicting types for 'TEMP_read'
 TEMP_t TEMP_read();
        ^
In file included from notoriOS.h:17:0,
                 from temperature.c:1:
temperature.h:13:8: note: previous declaration of 'TEMP_read' was here
 TEMP_t TEMP_read();
        ^
temperature.c:47:8: error: conflicting types for 'TEMP_read'
 TEMP_t TEMP_read(){
        ^
In file included from notoriOS.h:17:0,
                 from temperature.c:1:
temperature.h:13:8: note: previous declaration of 'TEMP_read' was here
 TEMP_t TEMP_read();
        ^
temperature.c: In function 'Temp_Debug':
temperature.c:123:10: warning: variable 'excerpt' set but not used [-Wunused-but-set-variable]
     char excerpt[300]; // for debugging
          ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 03/27/2022 13:41:24 ---------------
